; ModuleID = '/home/carl/AnghaBench/rofi/source/dialogs/extr_help-keys.c_help_keys_mode_destroy.c'
source_filename = "/home/carl/AnghaBench/rofi/source/dialogs/extr_help-keys.c_help_keys_mode_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @help_keys_mode_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @help_keys_mode_destroy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @mode_get_private_data(i32* %4)
  %6 = inttoptr i64 %5 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @g_strfreev(i32 %12)
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = call i32 @g_free(%struct.TYPE_3__* %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @mode_set_private_data(i32* %16, i32* null)
  br label %18

18:                                               ; preds = %9, %1
  ret void
}

declare dso_local i64 @mode_get_private_data(i32*) #1

declare dso_local i32 @g_strfreev(i32) #1

declare dso_local i32 @g_free(%struct.TYPE_3__*) #1

declare dso_local i32 @mode_set_private_data(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
